cppcheck/cppcheck_output.txt
main.cpp:14:6: error: Array 'a[10]' accessed at index 10, which is out of bounds. [arrayIndexOutOfBounds]
    a[10] = 0;
     ^
main.cpp:8:6: warning: Possible null pointer dereference: p [nullPointer]
    *p = 3;
     ^
main.cpp:18:14: note: Assignment 'p=0', assigned value is 0
    int *p = 0;
             ^
main.cpp:19:7: note: Calling function 'f', 1st argument 'p' value is 0
    f(p);
      ^
main.cpp:8:6: note: Null pointer dereference
    *p = 3;
     ^
main.cpp:21:16: error: Division by zero. [zerodiv]
    int x = 10 / 0;
               ^
main.cpp:14:11: style: Variable 'a[10]' is assigned a value that is never used. [unreadVariable]
    a[10] = 0;
          ^
main.cpp:21:11: style: Variable 'x' is assigned a value that is never used. [unreadVariable]
    int x = 10 / 0;
          ^
main.cpp:8:6: error: Null pointer dereference: p [ctunullpointer]
    *p = 3;
     ^
main.cpp:18:14: note: Assignment 'p=0', assigned value is 0

             ^
main.cpp:19:6: note: Calling function f, 1st argument is null
    f(p);
     ^
main.cpp:8:6: note: Dereferencing argument p that is null
    *p = 3;
     ^
